--- a/.github/workflows/python-tests.yml
+++ b/.github/workflows/python-tests.yml
@@ -16,21 +16,15 @@ jobs:
       with:
         python-version: '3.8'
 
+    - name: Show files
+      run: ls -la
+
     - name: Install dependencies
-      working-directory: ./new_rep_test  # ← КЛЮЧЕВОЕ ИЗМЕНЕНИЕ!
       run: |
-        python -m pip install --upgrade pip
         pip install -r requirements.txt
         pip install coverage
 
     - name: Run tests
-      working-directory: ./new_rep_test  # ← Тоже здесь работаем!
       run: |
         coverage run -m pytest test_app.py -v
         coverage report
-
-    - name: Upload coverage report
-      uses: actions/upload-artifact@v4
-      with:
-        name: coverage-report
-        path: new_rep_test/coverage.xml
