--- a/.github/workflows/python-tests.yml
+++ b/.github/workflows/python-tests.yml
@@ -11,20 +11,25 @@ jobs:
     steps:
     - uses: actions/checkout@v4
 
+    - name: Show files
+      run: |
+        echo "Files in root directory:"
+        ls -la
+        echo ""
+        echo "Checking requirements.txt:"
+        cat requirements.txt
+
     - name: Set up Python
       uses: actions/setup-python@v5
       with:
         python-version: '3.8'
 
-    - name: Show files
-      run: ls -la
-
     - name: Install dependencies
       run: |
+        python -m pip install --upgrade pip
         pip install -r requirements.txt
-        pip install coverage
 
     - name: Run tests
       run: |
-        coverage run -m pytest test_app.py -v
-        coverage report
+        echo "Running tests..."
+        python -m pytest test_app.py -v
